# tafis

./: README.md  pyproject.toml
src/tafis/: __init__.py  cli.py  data.py  extract_rules.py  linguify.py  llm_summarize.py  model.py  train.py  utils.py
